Re Engineer of DB and add AddBook, UpdateBook and ExceptionsHandlers Integration Tests